Add autocomplete component

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -13,6 +13,7 @@ $git-brand-colour: #159964;
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 @import "components/advice";
 @import "components/application-card";
+@import "components/autocomplete";
 @import "components/copy-content";
 @import "components/description-list";
 @import "components/header";
