--- a/app/views/_components/autocomplete/macro.njk
+++ b/app/views/_components/autocomplete/macro.njk
@@ -1,9 +1,9 @@
 {% macro appAutocompleteFromSelect(params) %}
-  {% set autocompleteType = 'select' %}
+  {% set autocompleteType = "select" %}
   {%- include "./template.njk" -%}
 {% endmacro %}
 
 {% macro appAutocompleteFromInput(params) %}
-  {% set autocompleteType = 'input' %}
+  {% set autocompleteType = "input" %}
   {%- include "./template.njk" -%}
 {% endmacro %}
