--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -37,10 +37,11 @@
           {{ provider.name }}
         </h2>
 
-        <table class="govuk-table app-table--vertical-align-middle app-table--courses">
+        <table class="govuk-table app-table--vertical-align-middle">
+          <!--  app-table--courses -->
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-              <th class="govuk-table__header">Course</th>
+              <th class="govuk-table__header govuk-!-width-one-third">Course</th>
               <th class="govuk-table__header">Status</th>
               <th class="govuk-table__header">
               Is it on <abbr class="app-!-text-decoration-underline-dotted" title="Find postgraduate teacher training">Find</abbr>?
@@ -55,10 +56,12 @@
               <!-- {{ course|dump|safe}} -->
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell app-table--courses__course-name">
-                <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ course.code }}">
-                  {{ course.name }} ({{ course.code }})
-                </a>
-                <span class="govuk-body-s">{{ course.qualification | getQualificationLabel }} - {{ course.studyMode | getStudyModeLabel | lower }}</span>
+                  <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ course.code }}">
+                    {{ course.name }} ({{ course.code }})
+                  </a>
+                  <span class="govuk-body-s">
+                    {{ course.qualification | getQualificationLabel }} - {{ course.studyMode | getStudyModeLabel | lower }}
+                  </span>
                 </td>
                 <td class="govuk-table__cell">
                   <strong class="govuk-tag govuk-tag--green">Published</strong>
