--- a/app/views/organisations/index.njk
+++ b/app/views/organisations/index.njk
@@ -4,7 +4,12 @@
 {% set caption = ""  %}
 
 {% block beforeContent %}
-
+{% if data.user.organisations.length > 1 %}
+  {{ govukBackLink({
+    text: "Back",
+    href: "/organisations"
+  }) }}
+{% endif %}
 {% endblock %}
 
 {% block content %}
