--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -46,50 +46,55 @@
           </h2>
         {% endif %}
 
-        <table class="govuk-table app-table--vertical-align-middle">
-          <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-              <th class="govuk-table__header govuk-!-width-one-third">Course</th>
-              <th class="govuk-table__header">Status</th>
-              <th class="govuk-table__header">
-              Is it on <abbr class="app-!-text-decoration-underline-dotted" title="Find postgraduate teacher training">Find</abbr>?
-              </th>
-              <th class="govuk-table__header">Applications</th>
-              <th class="govuk-table__header">Vacancies</th>
-            </tr>
-          </thead>
-          <tbody class="govuk-table__body">
+        {% if provider.courses.length %}
 
-            {% for course in provider.courses %}
-              <!-- {{ course|dump|safe}} -->
+          <table class="govuk-table app-table--vertical-align-middle">
+            <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                <td class="govuk-table__cell app-table--courses__course-name">
-                  <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ course.code }}">
-                    {{ course.name }} ({{ course.code }})
-                  </a>
-                  <span class="govuk-body-s">
-                    {{ course.qualification | getQualificationLabel }} - {{ course.studyMode | getStudyModeLabel | lower }}
-                  </span>
-                </td>
-                <td class="govuk-table__cell">
-                  <strong class="govuk-tag govuk-tag--green">Published</strong>
-                </td>
-                <td class="govuk-table__cell">
-                  <a class="govuk-link" href="#">
-                    Yes - view online
-                  </a>
-                </td>
-                <td class="govuk-table__cell">
-                  Open
-                </td>
-                <td class="govuk-table__cell">
-                  Yes (<a class="govuk-link" href="/organisations/1A4/2022/courses/J084/vacancies">Edit<span class="govuk-visually-hidden"> vacancies for Art and design (J084)</span></a>)
-                </td>
+                <th class="govuk-table__header govuk-!-width-one-third">Course</th>
+                <th class="govuk-table__header">Status</th>
+                <th class="govuk-table__header">
+                Is it on <abbr class="app-!-text-decoration-underline-dotted" title="Find postgraduate teacher training">Find</abbr>?
+                </th>
+                <th class="govuk-table__header">Applications</th>
+                <th class="govuk-table__header">Vacancies</th>
               </tr>
-            {% endfor %}
-          </tbody>
+            </thead>
+            <tbody class="govuk-table__body">
 
-        </table>
+              {% for course in provider.courses %}
+                <tr class="govuk-table__row">
+                  <td class="govuk-table__cell app-table--courses__course-name">
+                    <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ course.code }}">
+                      {{ course.name }} ({{ course.code }})
+                    </a>
+                    <span class="govuk-body-s">
+                      {{ course.qualification | getQualificationLabel }} - {{ course.studyMode | getStudyModeLabel | lower }}
+                    </span>
+                  </td>
+                  <td class="govuk-table__cell">
+                    <strong class="govuk-tag govuk-tag--green">Published</strong>
+                  </td>
+                  <td class="govuk-table__cell">
+                    <a class="govuk-link" href="#">
+                      Yes - view online
+                    </a>
+                  </td>
+                  <td class="govuk-table__cell">
+                    Open
+                  </td>
+                  <td class="govuk-table__cell">
+                    Yes (<a class="govuk-link" href="/organisations/1A4/2022/courses/J084/vacancies">Edit<span class="govuk-visually-hidden"> vacancies for Art and design (J084)</span></a>)
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+
+          </table>
+
+        {% else %}
+          <p class="govuk-body">There are no courses for {{ provider.name if provider.name else "your organisation" }}.</p>
+        {% endif %}
 
       {% endfor %}
 
