--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -27,6 +27,7 @@ $git-brand-colour: #159964;
 @import "core/card";
 @import "core/definition-list";
 @import "core/filter-layout";
+@import "core/header";
 @import "core/links";
 @import "core/table";
 @import "core/tag";
@@ -43,7 +44,7 @@ $git-brand-colour: #159964;
 // @import "components/autocomplete";
 // @import "components/copy-content";
 // @import "components/description-list";
-// @import "components/header";
+
 // @import "components/inset-text";
 // @import "components/link";
 // @import "components/list";
